components/mongo-frontend/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: mongo-db-example
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: mongo-frontend
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elmongo-frontend
  namespace: aaaa-studio
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-mongo-frontend
    weight: null
status: {}
